fixed vertical gap top bar and title card

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -10,6 +10,7 @@ Other
 
 $dark-primary : #455A64;
 $text-icons: #ffffff; 
+$primary-text: #212121;
 
 html {
   box-sizing: border-box;
@@ -28,40 +29,53 @@ body {
   position: relative;
 
   display: inline-block;
-  margin: 1rem;
   border-radius: 2px;
 
   background: #fff;
-}
 
-.card-1 {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.card-1:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.card-1 {
+    z-index: 1;
+
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.card1-hover:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .card-2 {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    z-index: 2;
+
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .card-3 {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    z-index: 3;
+
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .card-4 {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    z-index: 4;
+
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .card-5 {
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    z-index: 5;
+
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 
 #top-bar{
-    display: inline-block;
+    position: relative;
+
+    display: block;
     width: 100%;
+    overflow: auto;
     padding-left: 1em;
     padding-right: 1em;
 
@@ -76,6 +90,7 @@ body {
             margin: 0.5em;
 
             color: $text-icons;
+
         }
     }
 
@@ -93,3 +108,13 @@ body {
     }
 }
 
+#title{
+    position: relative;
+    vertical-align: top;
+
+    display: block;
+    padding: 2em;
+
+    background-color: $text-icons;
+    color: $primary-text;
+}
